--- a/style.css
+++ b/style.css
@@ -1644,6 +1644,7 @@ input[type="range"].master-slider::-webkit-slider-thumb {
     width: 1rem;
     height: 1rem;
     margin-left: 0.25rem;
+    accent-color: rgb(102, 205, 102);
 }
 
 #pptxDissolveLabel {
